# GraficznyEngine

./: CMakeLists.txt  GraficznyEngine.sln
GraficznyEngine/: Engine.cpp  Engine.h  GraficznyEngine.vcxproj  GraficznyEngine.vcxproj.filters  InputHadler.cpp  InputHandler.h  LineSegment.h  Point2D.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Source1.cpp  TextureManager.cpp  TextureManager.h  main.cpp
